--- a/index.html
+++ b/index.html
@@ -75,7 +75,68 @@
         </div> 
     </div>
     <div class="right">
-
+        <div class="about">
+          <div class="profile">
+            <h2 class="title2">Profile</h2>
+            <p>
+              I am a passionate Web developer with proficiency in
+              HTML, CSS, JavaScript, Python, and C++ gained through dedicated self-study.
+              My programming journey has equipped me with a solid
+              foundation in front-end technologies, enabling me to build 
+              seamless, user-friendly interfaces and robust system architectures. <br> <br>
+              I thrive in environments where I can solve challenging problems and always 
+              eager to learn new technologies and best practices to enhance my development skills.
+            </p>
+          </div>
+        </div>
+        <div class="about">
+          <h2 class="title2">Training</h2>
+          <div class="box">
+            
+            <div class="year">
+              <h5>07/2023 - 08/2023</h5>
+              <h5>Dr. Virendra Swarup Institute <br> of Computer Studies</h5>
+            </div>
+            <div class="text">
+              <h4>Python</h4>
+            </div>
+          </div>
+          <div class="box">
+            
+            <div class="year">
+              <h5>06/2024 - 07/2024</h5>
+              <h5>Dr. Virendra Swarup Institute <br> of Computer Studies</h5>
+            </div>
+            <div class="text">
+              <h4>MERN Stack Developer</h4>
+            </div>
+          </div>
+        </div>
+        <div class="about skills">
+          <h2 class="title2">Languages</h2>
+          <div class="box">
+            <h4>HTML</h4>
+            <div class="percente">
+              <div style="width: 70%;"></div>
+            </div>
+          </div>
+          <div class="box">
+            <h4>CSS</h4>
+            <div class="percente"></div>
+          </div>
+          <div class="box">
+            <h4>JAVA SCRIPT</h4>
+            <div class="percente"></div>
+          </div>
+          <div class="box">
+            <h4>PYTHON</h4>
+            <div class="percente"></div>
+          </div>
+          <div class="box">
+            <h4>C & C++</h4>
+            <div class="percente"></div>
+          </div>
+        </div>
     </div>
   </div>  
 </body>
