--- a/index.html
+++ b/index.html
@@ -117,25 +117,41 @@
           <div class="box">
             <h4>HTML</h4>
             <div class="percente">
-              <div style="width: 70%;"></div>
+              <div style="width: 90%;"></div>
             </div>
           </div>
           <div class="box">
             <h4>CSS</h4>
-            <div class="percente"></div>
+            <div class="percente">
+              <div style="width: 70%;"></div>
+            </div>
           </div>
           <div class="box">
             <h4>JAVA SCRIPT</h4>
-            <div class="percente"></div>
+            <div class="percente">
+              <div style="width: 60%;"></div>
+            </div>
           </div>
           <div class="box">
             <h4>PYTHON</h4>
-            <div class="percente"></div>
+            <div class="percente">
+              <div style="width: 70%;"></div>
+            </div>
           </div>
           <div class="box">
             <h4>C & C++</h4>
-            <div class="percente"></div>
+            <div class="percente">
+              <div style="width: 70%;"></div>
+            </div>
           </div>
+        </div>
+        <div class="about interest">
+          <h2 class="title2">Interest</h2>
+          <ul>
+            <li><i class="fa fa-gamepad" aria-hidden="true"></i>gaming</li>
+            <li><i class="fa fa-book" aria-hidden="true"></i>Reading</li>
+            <li><i class="fa fa-youtube-play" aria-hidden="true"></i>You Tube</li>
+          </ul>
         </div>
     </div>
   </div>  
